// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render should render 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-1:hover {
  box-shadow: 0 0 0 1px #001489;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  box-shadow: 0 0 0 1px #030b5d;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: inherit;
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:focus::-webkit-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::-moz-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus:-ms-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::placeholder {
  color: rgb(112,117,120);
}

.emotion-0:disabled {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      cursor="text"
      display="flex"
      width="100%"
    >
      <input
        class="emotion-0"
        id="input"
        type="text"
        value="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input render should render with disabled 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: inherit;
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:focus::-webkit-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::-moz-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus:-ms-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::placeholder {
  color: rgb(112,117,120);
}

.emotion-0:disabled {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  width: 100%;
  background-color: rgb(248,248,249);
  box-shadow: 0 0 0 1px #cacdd8;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: not-allowed;
}

.emotion-1:hover {
  box-shadow: 0 0 0 1px #cacdd8;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  box-shadow: 0 0 0 1px #cacdd8;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      cursor="not-allowed"
      display="flex"
      width="100%"
    >
      <input
        class="emotion-0"
        disabled=""
        id="input"
        type="text"
        value="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input render should render with hasError 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: inherit;
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:focus::-webkit-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::-moz-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus:-ms-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::placeholder {
  color: rgb(112,117,120);
}

.emotion-0:disabled {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #e22525;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-1:hover {
  box-shadow: 0 0 0 1px #750c0c;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  box-shadow: 0 0 0 1px #030b5d;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      cursor="text"
      display="flex"
      width="100%"
    >
      <input
        aria-invalid="true"
        class="emotion-0"
        id="input"
        type="text"
        value="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input render should render with prefix 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-2 {
  box-sizing: border-box;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #001489;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:active,
.emotion-2[data-active=true] {
  box-shadow: 0 0 0 1px #030b5d;
}

.emotion-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: inherit;
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-1::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-1::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-1:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-1::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-1:focus::-webkit-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-1:focus::-moz-placeholder {
  color: rgb(112,117,120);
}

.emotion-1:focus:-ms-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-1:focus::placeholder {
  color: rgb(112,117,120);
}

.emotion-1:disabled {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: rgb(248,248,249);
  border-bottom-left-radius: 4px;
  border-right-color: rgb(225,227,234);
  border-right-style: solid;
  border-right-width: 1px;
  border-top-left-radius: 4px;
  display: flex;
  line-height: 1.25rem;
  padding: 0.5rem;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
      cursor="text"
      display="flex"
      width="100%"
    >
      <div
        class="emotion-0"
        display="flex"
      >
        <div>
          prefix
        </div>
      </div>
      <input
        class="emotion-1"
        id="input"
        type="text"
        value="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input render should render with readOnly 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: inherit;
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:focus::-webkit-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::-moz-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus:-ms-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::placeholder {
  color: rgb(112,117,120);
}

.emotion-0:disabled {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  display: flex;
  width: 100%;
  background-color: rgb(248,248,249);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-1:hover {
  box-shadow: 0 0 0 1px #888c8e;
}

.emotion-1:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active,
.emotion-1[data-active=true] {
  box-shadow: 0 0 0 1px #030b5d;
}

<div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      cursor="text"
      display="flex"
      width="100%"
    >
      <input
        aria-readonly="true"
        class="emotion-0"
        id="input"
        readonly=""
        type="text"
        value="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input render should render with suffix 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-2 {
  box-sizing: border-box;
  display: flex;
  width: 100%;
  background-color: rgb(255,255,255);
  box-shadow: 0 0 0 1px #888c8e;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #001489;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:active,
.emotion-2[data-active=true] {
  box-shadow: 0 0 0 1px #030b5d;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  border-radius: 4px;
  box-shadow: none;
  color: inherit;
  display: block;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  outline: none;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  resize: none;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0::placeholder {
  color: rgb(112,117,120);
  font-style: italic;
}

.emotion-0:focus::-webkit-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::-moz-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus:-ms-input-placeholder {
  color: rgb(112,117,120);
}

.emotion-0:focus::placeholder {
  color: rgb(112,117,120);
}

.emotion-0:disabled {
  color: rgb(200,204,207);
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: rgb(248,248,249);
  border-bottom-right-radius: 4px;
  border-left-color: rgb(225,227,234);
  border-left-style: solid;
  border-left-width: 1px;
  border-top-right-radius: 4px;
  display: flex;
  line-height: 1.25rem;
  padding: 0.5rem;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
      cursor="text"
      display="flex"
      width="100%"
    >
      <input
        class="emotion-0"
        id="input"
        type="text"
        value="test"
      />
      <div
        class="emotion-1"
        display="flex"
      >
        <div>
          suffix
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
